--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,17 @@
         </li>
       </ul>
     </div>
-    <h2>I'm an h2</h2>
+    <h2>THE FOUNDERS</h2>
+    <p>
+      Learn Enough to Be Dangerous was founded in 2015 by Michael Hartl, Lee
+      Donahoe,
+      and Nick Merwin. We believe that the kind of technical sophistication
+      taught by
+      the Learn Enough tutorials can benefit at least a billion people, and
+      probably
+      more.
+    </p>
+    <p>Test paragraph</p>
     <div class="bio-wrapper">
       <div class="bio-box">
         <img src="https://placekitten.com/g/400/400">
@@ -50,7 +60,8 @@
           <p>
             When he's not literally swimming with sharks or hunting powder
             stashes on his snowboard, you can find Lee in front of his computer
-            designing interfaces, doing front-end development, or writing some of
+            designing interfaces, doing front-end development, or writing some
+            of
             the interface-related Learn Enough tutorials.
           </p>
         </div>
@@ -93,7 +104,8 @@
     <h3>Background</h3>
     <p>
       Learn Enough to Be Dangerous is an outgrowth of the
-      <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and the
+      <a href="https://www.railstutorial.org/">Ruby on Rails Tutorial</a> and
+      the
       <a href="https://www.softcover.io/">Softcover publishing platform</a>.
       This page is part of the sample site for
       <a href="https://learnenough.com/css-tutorial"><em>Learn Enough CSS and
