--- a/css/main.css
+++ b/css/main.css
@@ -56,6 +56,13 @@ h1 {
 a {
   color: #f00;
 }
+h2 ~ p {
+  font-size: 0.8em;
+  font-style: italic;
+  margin: 1em auto 0;
+  max-width: 70%;
+  text-align: center;
+}
 
 /* ヒーロースタイル */
 .full-hero {
@@ -136,6 +143,10 @@ a {
   display: inline-block;
   margin-left: 1em;
 }
+.header-nav > li ~ li {
+  border-left: 1px solid rgba(0, 0, 0, 0.3);
+  padding-left: 1em;
+}
 .header-nav a {
   color: #000;
   font-size: 0.8rem;
@@ -146,6 +157,12 @@ a {
 .header-nav a:hover,
 .header-nav a:active {
   color: #ed6e2f;
+}
+.header-nav > li:first-child a {
+  color: #ed6e2f;
+}
+.header-nav > li:first-child a:hover {
+  color: #000;
 }
 .header-logo:hover,
 .header-logo:active {
