--- a/css/main.css
+++ b/css/main.css
@@ -135,6 +135,30 @@ h2 ~ p {
   color: green;
 }
 /* ヘッダースタイル */
+.header {
+  background-color: #000;
+  color: #fff;
+  /* height: 400px; */
+  /* position: relative; */
+  /* width: 100%; */
+}
+.header-logo {
+  background-color: #000;
+  box-sizing: border-box;
+  display: block;
+  height: 10vh;
+  padding-top: 10px;
+  position: relative;
+  text-align: center;
+  width: 10vh;
+}
+.header-logo:hover,
+.header-logo:active {
+  opacity: 0.5;
+}
+.header-logo img {
+  width: 4.3vh;
+}
 .header-nav {
   float: right;
   padding: 5.5vh 60px 0 0;
@@ -144,11 +168,11 @@ h2 ~ p {
   margin-left: 1em;
 }
 .header-nav > li ~ li {
-  border-left: 1px solid rgba(0, 0, 0, 0.3);
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
   padding-left: 1em;
 }
 .header-nav a {
-  color: #000;
+  color: #fff;
   font-size: 0.8rem;
   font-weight: bold;
   text-decoration: none;
@@ -162,9 +186,5 @@ h2 ~ p {
   color: #ed6e2f;
 }
 .header-nav > li:first-child a:hover {
-  color: #000;
-}
-.header-logo:hover,
-.header-logo:active {
-  opacity: 0.5;
+  color: #fff;
 }
