--- a/css/main.css
+++ b/css/main.css
@@ -47,7 +47,9 @@ a img {
 /* END RESET*/
 /* グローバルスタイル */
 body {
-  font-family: helvetica, arial, sans;
+  /* font-family: helvetica, arial, sans; */
+  box-shadow: 0 0 0 30px #000 inset;
+  padding: 0 30px;
 }
 h1 {
   font-size: 7vw;
@@ -138,6 +140,9 @@ h2 ~ p {
 .header {
   background-color: #000;
   color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
   /* height: 400px; */
   /* position: relative; */
   /* width: 100%; */
@@ -147,6 +152,7 @@ h2 ~ p {
   box-sizing: border-box;
   display: block;
   height: 10vh;
+  left: -30px;
   padding-top: 10px;
   position: relative;
   text-align: center;
@@ -154,7 +160,7 @@ h2 ~ p {
 }
 .header-logo:hover,
 .header-logo:active {
-  opacity: 0.5;
+  background-color: #ed6e2f;
 }
 .header-logo img {
   width: 4.3vh;
