--- a/css/main.css
+++ b/css/main.css
@@ -45,11 +45,14 @@ a img {
   border: none;
 }
 /* END RESET*/
+
 /* グローバルスタイル */
-body {
-  /* font-family: helvetica, arial, sans; */
+html {
   box-shadow: 0 0 0 30px #000 inset;
   padding: 0 30px;
+}
+body {
+  font-family: helvetica, arial, sans;
 }
 h1 {
   font-size: 7vw;
@@ -66,13 +69,100 @@ h2 ~ p {
   text-align: center;
 }
 
+/* ヘッダースタイル */
+.header {
+  background-color: #000;
+  color: #fff;
+  position: fixed;
+  width: 100%;
+  z-index: 20;
+}
+.header-logo {
+  background-color: #000;
+  box-sizing: border-box;
+  display: block;
+  height: 10vh;
+  left: -30px;
+  padding-top: 10px;
+  position: relative;
+  text-align: center;
+  width: 10vh;
+}
+.header-logo:hover,
+.header-logo:active {
+  background-color: #ed6e2f;
+}
+.header-logo img {
+  width: 4.3vh;
+}
+.header-nav {
+  float: right;
+  padding: 5.5vh 60px 0 0;
+}
+.header-nav > li {
+  display: inline-block;
+  margin-left: 1em;
+}
+.header-nav > li ~ li {
+  border-left: 1px solid rgba(255, 255, 255, 0.3);
+  padding-left: 1em;
+}
+.header-nav a {
+  color: #fff;
+}
+.nav-links a {
+  font-size: 0.8rem;
+  font-weight: bold;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.nav-links a:hover,
+.nav-links a:active  {
+  color: #ed6e2f;
+}
+.header-nav > li:first-child a {
+  color: #ed6e2f;
+}
+.header-nav > li:first-child a:hover {
+  color: #fff;
+}
+
+/* フッタースタイル */
+.footer {
+  background-color: #000;
+  padding: 10vh 0 15vh;
+  text-align: center;
+}
+.footer-logo img {
+  width: 50px;
+}
+.footer h3 {
+  color: #fff;
+  padding-top: 1.5em;
+  text-transform: uppercase;
+}
+.footer h3 span {
+  color: #aaa;
+}
+.footer-nav li {
+  display: inline-block;
+  margin: 2em 1em 0;
+}
+.footer-nav a {
+  color: #ccc;
+}
+
 /* ヒーロースタイル */
 .full-hero {
   background-color: #c7dbfc;
   height: 50vh;
 }
-
 /* SNSスタイル */
+.social-list {
+  list-style: none;
+  padding: 0;
+  text-align: center;
+}
 .social-link {
   background: rgba(150, 150, 150, 0.5);
   border-radius: 99px;
@@ -89,11 +179,6 @@ h2 ~ p {
   text-decoration: none;
   vertical-align: middle;
   width: 2.5em;
-}
-.social-list {
-  list-style: none;
-  padding: 0;
-  text-align: center;
 }
 .social-list > li {
   display: inline-block;
@@ -131,66 +216,7 @@ h2 ~ p {
 }
 .bio-copy {
   font-size: 1em;
-  line-height: 1.5;
 }
 .bio-copy a {
   color: green;
-}
-/* ヘッダースタイル */
-.header {
-  background-color: #000;
-  color: #fff;
-  position: fixed;
-  width: 100%;
-  z-index: 20;
-  /* height: 400px; */
-  /* position: relative; */
-  /* width: 100%; */
-}
-.header-logo {
-  background-color: #000;
-  box-sizing: border-box;
-  display: block;
-  height: 10vh;
-  left: -30px;
-  padding-top: 10px;
-  position: relative;
-  text-align: center;
-  width: 10vh;
-}
-.header-logo:hover,
-.header-logo:active {
-  background-color: #ed6e2f;
-}
-.header-logo img {
-  width: 4.3vh;
-}
-.header-nav {
-  float: right;
-  padding: 5.5vh 60px 0 0;
-}
-.header-nav > li {
-  display: inline-block;
-  margin-left: 1em;
-}
-.header-nav > li ~ li {
-  border-left: 1px solid rgba(255, 255, 255, 0.3);
-  padding-left: 1em;
-}
-.header-nav a {
-  color: #fff;
-  font-size: 0.8rem;
-  font-weight: bold;
-  text-decoration: none;
-  text-transform: uppercase;
-}
-.header-nav a:hover,
-.header-nav a:active {
-  color: #ed6e2f;
-}
-.header-nav > li:first-child a {
-  color: #ed6e2f;
-}
-.header-nav > li:first-child a:hover {
-  color: #fff;
 }
