--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,15 @@ footer, header, hgroup, menu, nav, section {
   display: block;
 }
 body {
-  line-height: 1;
+  display: flex;
+  flex-direction: column;
+  font-family: Helvetica, Arial, Sans;
+  min-height: 100vh;
+}
+.content-container {
+  flex-grow: 1;
+  padding-top: 10vh;
+  width: 100%;
 }
 blockquote, q {
   quotes: none;
@@ -163,8 +171,7 @@ h2 ~ p {
   background-color: #c7dbfc;
   background-size: cover;
   box-sizing: border-box;
-  height: 100vh;
-  padding-top: 10vh;
+  height: 90vh;
 }
 .full-hero:after {
   border: 10px solid;
